# valetudo-matter

./: .clang-format  .clang-tidy  .gitattributes  .gitmodules  .gn  BUILD.gn  README.md  args.gni
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-ci.yml
docker/: analyze.Dockerfile  arm64-cross.Dockerfile  host.Dockerfile
include/: CHIPProjectAppConfig.h  logger.h  rvc.h  socket.h
include/clusters/: rvc-clean-mode.h  rvc-operational-state.h  rvc-run-mode.h  rvc-service-area-storage.h  rvc-service-area.h
include/mqtt/: broker.h  valetudo.h
src/: broker.cpp  main.cpp  rvc-clean-mode.cpp  rvc-operational-state.cpp  rvc-run-mode.cpp  rvc-service-area-storage.cpp  rvc-service-area.cpp  rvc.cpp  socket.cpp  valetudo.cpp
zap/: BUILD.gn  valetudo-matter.matter  valetudo-matter.zap
