import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

config("config") {
  include_dirs = [ "include" ]
}

ldflags = [
  "-fuse-ld=lld",
]

executable("valetudo-matter") {
  sources = [
    "include/CHIPProjectAppConfig.h",
    "src/main.cpp",
    "src/identify.cpp",
    "src/broker.cpp",
    "src/rvc.cpp",
    "src/rvc-clean-mode.cpp",
    "src/rvc-operational-state.cpp",
    "src/rvc-run-mode.cpp",
    "src/socket.cpp",
  ]
  include_dirs = [
    "include",
  ]
  deps = [
    "${chip_root}/examples/platform/linux:app-main",
    "//zap",
  ]
  output_dir = root_out_dir

}

group("linux") {
  deps = [ ":valetudo-matter" ]
}

group("default") {
  deps = [ ":linux" ]
}